Possible fix for contact element cutoff on Chrome for Android

--- a/src/Stylesheets/_responsiveness.scss
+++ b/src/Stylesheets/_responsiveness.scss
@@ -2,6 +2,7 @@
 	// Reset App height to offset header
 	.App {
 		height: calc(100vh - 50px);
+		margin-bottom: 50px;
 	}
 }
 
