--- a/src/index.css
+++ b/src/index.css
@@ -180,6 +180,7 @@ footer .contact-info > * > img {
 @media screen and (max-width: 599px) {
   .App {
     height: calc(100vh - 50px);
+    margin-bottom: 50px;
   }
 }
 @media screen and (min-width: 600px) {
